--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
+.container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.searchbar {
+  width: 100%;
+  max-width: 700px;
+  display: flex;
+  align-items: center;
+  border-radius: 20px;
+  padding: 10px 20px;
+}
