--- a/style.css
+++ b/style.css
@@ -12,5 +12,12 @@
   align-items: center;
   border-radius: 20px;
   padding: 10px 20px;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 115, 0.3);
+}
+
+.searchbar input {
+  background: transparent;
+  flex: 1;
+  border: 0;
+  outline: none;
 }
