--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   align-items: center;
   border-radius: 20px;
   padding: 10px 20px;
-  background: rgba(255, 255, 115, 0.3);
+  background: rgba(0, 255, 255, 0.4);
 }
 
 .searchbar input {
@@ -29,8 +29,9 @@
 
 .searchbar button {
   border: 0;
-  border-radius: 70%;
+  border-radius: 20%;
   width: 60px;
   height: 60px;
   cursor: pointer;
+  background: transparent;
 }
