--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 183, 255, 1);
 }
 
 .searchbar {
@@ -25,7 +24,7 @@
 }
 
 .searchbar button img {
-  width: 25px;
+  width: 30px;
 }
 
 .searchbar button {
@@ -35,4 +34,43 @@
   height: 60px;
   cursor: pointer;
   background: transparent;
+}
+
+.navigation a{
+    position: relative;
+    font-size: 1em;
+    color: #000000;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
+}
+
+.navigation a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    width: 100%;
+    height: 3px;
+    background: #000000;
+    border-radius: 5px;
+    transform-origin: left;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+
+.navigation a:hover::after{
+    transform-origin: right;
+    transform:scaleX(1);
+}
+
+header{
+    position: fixed;
+    padding: 5px 15px;
+    width: 95%;
+    display: flex;
+    background: transparent;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 99;
 }
